internal/xds/translator/testdata/out/xds-ir/metrics-virtual-host.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
    virtualClusters:
    - headers:
      - name: :authority
        stringMatch:
          exact: '*'
      name: '*'
